시큐리티 완성

--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Employees</title>
@@ -7,6 +8,19 @@
 </head>
 <body>
 <h1>여자배구 선수목록</h1>
+<div sec:authorize="isAuthenticated()">
+    Logged user: <span sec:authentication="name">damansa</span>
+    <a href="javascript: document.logoutForm.submit()" class="dropdown-toggle">Sign out</a>
+    <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+        <input hidden type="submit" value="Sign Out" />
+    </form>
+</div>
+<div sec:authorize="hasAuthority('admin')">
+    admin 권한입니다.
+</div>
+<div sec:authorize="hasAuthority('staff')">
+    staff 권한입니다.
+</div>
 <table>
     <thead>
     <tr>
@@ -24,7 +38,13 @@
         <td th:text="${employee.firstName}"></td>
         <td th:text="${employee.lastName}"></td>
         <td th:text="${employee.sex}"></td>
-        <td th:text="${employee.birthday}"></td>
+        <td>
+
+                <div sec:authorize="hasAuthority('admin')"
+                        th:text="${employee.birthday}"></div>
+
+
+        </td>
         <td th:text="${employee.mailAddress}"></td>
     </tr>
     </tbody>
